[gd_scene load_steps=3 format=3 uid="uid://bbn4ykd5686bl"]

[ext_resource type="Script" uid="uid://c4ayl4svupgp1" path="res://scripts/player_controller.gd" id="1_8afob"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x7p2l"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8afob")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x7p2l")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Flashlight" type="SpotLight3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
visible = false
light_color = Color(1, 0.97633153, 0.9063318, 1)
light_energy = 2.0
light_indirect_energy = 0.5
shadow_enabled = true
spot_range = 15.0
spot_angle = 35.0

[node name="FootstepSound" type="AudioStreamPlayer3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
value = 100.0

[node name="HealthLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 55.0
offset_right = 60.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 20
text = "Health: 100/100"

[node name="Crosshair" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -21.0
offset_right = 8.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "+"

[node name="AmmoLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 60.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 20
text = "Ammo: 10/20"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.70000005)

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "ПАУЗА"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ПРОДОЛЖИТЬ"

[node name="RestartButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "НАЧАТЬ ЗАНОВО"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ГЛАВНОЕ МЕНЮ"

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathOverlay" type="ColorRect" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48677072, 0, 0, 0.8)

[node name="DeathText" type="Label" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -124.0
offset_right = 163.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.48452926, 0.48452926, 1)
theme_override_font_sizes/font_size = 48
text = "ВЫ ПОГИБЛИ"
horizontal_alignment = 1

[node name="RespawnButton" type="Button" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "НАЧАТЬ ЗАНОВО"
